# Coraltb

./: .gitignore  .gitignore   README.md  pyproject.toml
Coraltb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/: coral.py
cli/: coral.py
cli/commands/: codegen.py  regress_cmd.py  sim.py  sim_cmd.py
coral/: instantiate.py  parse.py  python_tb.py  regress.py  setup_test.py  verilog.py
coral/cli/: coral.py
coral/cli/commands/: sim_cmd.py
coral/codegen/:  sim_scripts.py  python_tb.py  verilog_wtb.py
coral/codegen/templates/: test_comb_inputs.py.j2
coral/common/: pyverilog_helpers.py
coral/report/: __init__.py  dat_parser.py  models.py  statistics.py  write_md.py  write_report.py
coral/report/render/: general.py
coral/run/: sim.py
coral/runners/: sim.py
scripts/: coral.py
test/adder_test/: adder.v
test/examples/: pyverilog_codegen.py  pyverilog_parse.py
test/report/: test_dat_parser.py  test_statistics.py  test_write_html.py  test_write_md.py
test/report/fixture/: sub.v  top.v  top_tb.py
test/report/test_output/: report.md
test/report/test_output/html_report/: index.html
test/report/test_output/html_report/modules/: top.sub0.html
test/src/: adder.v
test_output/: report.md
test_output/html_report/modules/: top.html  top.sub*.html  top.sub.html
