[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Coraltb"
version = "0.1.0"
description = "Cocotb-based test creation and simulation running utilities"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    {name = "James Ashie Kotey", email = "jashiekotey1@sheffield.ac.uk" },
]
keywords = ["rtl-verification", "automation", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich",
    "cocotb>=1.8.3",
    "cocotb-coverage",
    "pytest",
    "pyverilog"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "black",
]

[project.urls]
Homepage = "https://github.com/Sheffield-Chip-Design-Team/Coraltb"
Repository = "https://github.com/Sheffield-Chip-Design-Team/Coraltb"
Documentation = "https://github.com/Sheffield-Chip-Design-Team/Coraltb"

[project.scripts]
coral  = "coral.cli.coral:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["coral*", "cli*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
min_version = "6.0"
addopts = "--strict-markers --strict-positions"
testpaths = [
    "test",
]
